outputs_20260401-053340-a4e52450/codegen/production/build_logs/compiler_stderr.log
C:\Users\extalth\AppData\Local\Temp\tdd_build_eymzhi30\src\egtm_atom_adc_tmadc_multiple_channels.c: In function 'interruptEgtmAtom':
C:\Users\extalth\AppData\Local\Temp\tdd_build_eymzhi30\src\egtm_atom_adc_tmadc_multiple_channels.c:38:43: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P33'?
   38 | #define LED                              &MODULE_P03, 9
      |                                           ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_eymzhi30\src\egtm_atom_adc_tmadc_multiple_channels.c:100:23: note: in expansion of macro 'LED'
  100 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_eymzhi30\src\egtm_atom_adc_tmadc_multiple_channels.c:38:43: note: each undeclared identifier is reported only once for each function it appears in
   38 | #define LED                              &MODULE_P03, 9
      |                                           ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_eymzhi30\src\egtm_atom_adc_tmadc_multiple_channels.c:100:23: note: in expansion of macro 'LED'
  100 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_eymzhi30\src\egtm_atom_adc_tmadc_multiple_channels.c: In function 'initEgtmAtom3phInv':
C:\Users\extalth\AppData\Local\Temp\tdd_build_eymzhi30\src\egtm_atom_adc_tmadc_multiple_channels.c:38:43: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P33'?
   38 | #define LED                              &MODULE_P03, 9
      |                                           ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_eymzhi30\src\egtm_atom_adc_tmadc_multiple_channels.c:275:30: note: in expansion of macro 'LED'
  275 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~
